# Atomic_Habits

./: .env_examlpe  Dockerfile  README.md  docker-compose.yml  pyproject.toml
atomic_habits/: admin.py  models.py  permissions.py  seriallizers.py  tasks.py  urls.py  validators.py  views.py
atomic_habits/migrations/: 0001_initial.py  0002_alter_habit_is_pleasant_habit_and_more.py  0003_alter_habit_award.py  0004_habit_related_habit.py  0005_remove_habit_is_related_habit.py  0006_habit_start_date.py  0007_alter_habit_start_date.py  0008_alter_habit_start_date.py  0009_remove_habit_start_date_alter_habit_time.py
atomic_habits/tests/: test_HabitsVievSet.py  test_PublicHabitsListAPIView.py  test_validators.py
config/: settings.py  urls.py
fixtures/: habits.json  users.json
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_telegram_username.py  0004_rename_telegram_username_user_telegram_id.py  0005_alter_user_telegram_id.py
